# znakpdf

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  pyproject.toml
app/: main.py
tests/: test_parse.py
